--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -15,9 +15,10 @@
 <link href="{% static 'site/css/style.css' %}" rel="stylesheet">
 {% endblock styles %}
 
-<!-- Benefits of the Django application -->
-{% block container %}
+{% block splash %}
+{% endblock splash %}
 
+{% block container %}
 <section class="cd-faq">
   <ul class="cd-faq-categories">
     <li><a class="selected" href="#basics">基本问题</a></li>
