--- a/src/templates/problem_detail.html
+++ b/src/templates/problem_detail.html
@@ -9,12 +9,9 @@
   {% include "_navbar.html" with active_link="problem-list" %}
 {% endblock %}
 
-{% block styles %}
-{% endblock styles %}
-
 <!-- Benefits of the Django application -->
 {% block splash %}
-<div class="jumbotron jumbotron-carousel corporate-jumbo">
+<div class="jumbotron jumbotron-carousel">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-sm-8" style="text-align:center">
