change login and signup language to Chinese

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -6,7 +6,7 @@
 {% block title %}{{ block.super }}App下载{% endblock %}
 
 {% block navbar-left %}
-  {% include "_navbar.html" with active_link="app-download" %}
+  {% include "_navbar.html" with active_link="app" %}
 {% endblock %}
 
 {% block splash %}
