--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -187,8 +187,8 @@
                 </div>
                 <div class="col-lg-6 text-right">
                   联系我们
-                  <a href="#"><i class="fa fa-facebook"></i> Facebook</a> or
-                  <a href="#"><i class="fa fa-twitter"></i> Twitter</a>
+                  <a href="#"><i class="fa fa-wechat"></i> 微信</a> or
+                  <a href="#"><i class="fa fa-weibo"></i> 新浪微博</a>
                 </div>
               </div>
             </div>
