add model Answer and personal space

--- a/src/templates/_navbar.html
+++ b/src/templates/_navbar.html
@@ -6,3 +6,4 @@
 <li {% if active_link == "app" %}class="active"{% endif %}><a href="{% url 'app' %}">App中心</a></li>
 <li {% if active_link == "faq" %}class="active"{% endif %}><a href="{% url 'faq' %}">常见问题</a></li>
 <li {% if active_link == "about" %}class="active"{% endif %}><a href="{% url 'about' %}">关于我们</a></li>
+<li {% if active_link == "myspace" %}class="active"{% endif %}><a href="{% url 'myspace' %}">个人空间</a></li>
