--- a/src/templates/teacher_booking.html
+++ b/src/templates/teacher_booking.html
@@ -9,6 +9,11 @@
   {% include "_navbar.html" with active_link="teacher-list" %}
 {% endblock %}
 
+{% block style %}
+{{ block.super }}
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+{% endblock style %}
+
 {% block splash %}
 <div class="jumbotron jumbotron-carousel">
   <div class="container">
@@ -24,5 +29,17 @@
 {% endblock container %}
 
 {% block scripts %}
+{{ block.super }}
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+<script>
+  $(function() {
+    $( ".datepicker" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+      yearRange: "1900:2012",
+      // You can put more options here.
 
+    });
+  });
+  </script>
 {% endblock scripts %}
