--- a/src/templates/teacher_list.html
+++ b/src/templates/teacher_list.html
@@ -96,7 +96,7 @@
         <td>
             <div class="control">
                 <a href="{% url 'teacher-detail' teacher.id %}" target="_blank" alt="detail" title="detail" class="btn btn-control">查看TA</a>
-                <a href="javascript:;" class="btn appoint_current">联系TA</a>
+                <a href="{% url 'teacher-booking' teacher.id %}" class="btn appoint_current">联系TA</a>
             </div>
         </td>
         </tr>
