--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -201,6 +201,12 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     {% block scripts %}
+    {{block.super}}
+    <script>
+      $('.dropdown-toggle').click(function(){
+        $(this).next(".dropdown-menu").toggle();
+      });
+    </script>
     {% endblock scripts %}
   </body>
 </html>
