--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -138,6 +138,7 @@
 {% endblock container %}
 
 {% block scripts %}
+{{block.super}}
 <script src="{% static 'site/js/site.js' %}"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="{% static 'site/js/jquery.chained.min.js' %}"></script>
