--- a/src/templates/student_list.html
+++ b/src/templates/student_list.html
@@ -3,10 +3,10 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ block.super }}教师列表{% endblock %}
+{% block title %}{{ block.super }}学生列表{% endblock %}
 
 {% block navbar-left %}
-  {% include "_navbar.html" with active_link="teacher-list" %}
+  {% include "_navbar.html" with active_link="student-list" %}
 {% endblock %}
 
 {% block styles %}
