--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -78,6 +78,7 @@
 {% endblock container %}
 
 {% block scripts %}
+{{block.super}}
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script>
 
