--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -242,6 +242,7 @@
 {% endblock container %}
 
 {% block scripts %}
+{{block.super}}
 <script src="{% static 'site/js/jquery-2.1.1.js' %}"></script>
 <script src="{% static 'site/js/jquery.mobile.custom.min.js' %}"></script>
 <script src="{% static 'site/js/main.js' %}"></script> <!-- Resource jQuery -->
