--- a/src/templates/student_request.html
+++ b/src/templates/student_request.html
@@ -3,68 +3,22 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ block.super }}老师资料{% endblock %}
+{% block title %}{{ block.super }}发帖找老师{% endblock %}
 
 {% block navbar-left %}
-  {% include "_navbar.html" with active_link="teacher-list" %}
+  {% include "_navbar.html" with active_link="student-request" %}
 {% endblock %}
-
-{% block styles %}
-<style type="text/css">
-  span.stars, span.stars span {
-  display: block;
-  background: url(/media/stars.png) 0 -16px repeat-x;
-  width: 80px;
-  height: 16px;
-  }
-
-  span.stars span {
-  background-position: 0 0;
-  }
-</style>
-{% endblock styles %}
 
 {% block splash %}
 <div class="jumbotron jumbotron-carousel corporate-jumbo">
   <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-sm-8" style="text-align:center">
-        <div class="text-center"><img class="img-circle centered" src="/media/{{ teacher.picture }}" alt="profile pic"></div>
-        <!--<center>-->
-        <h1>{{ object.full_name }}</h1>
-        <p>{{ object.school }}</p>
-        <p>
-        {% for subject in object.subjects.all %}
-           <strong>{{ subject }}</strong>
-        {% endfor %}
-        </p>
-        <div style="position: absolute;right: 80px; top: 350px">
-        <p style="color:red;">{{ object.level }}</p>
-        <p style="color:red;">{{ object.price }}元/小时</p>
-          </div>
-        <p/>
-          <!--</center>-->
-      </div>
-      <div class="col-md-4 col-sm-4">
-
-      </div>
-    </div>
+    <center><h1>个人信息</h1></center>
+    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-default">完成</button>
+    </form>
   </div>
-</div>
-{% endblock splash %}
-
-{% block container %}
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4">
-      <h1>认证战绩</h1>
-      <p>{{ object.achievement }}</p>
-    </div>
-    <div class="col-lg-4">
-      <h1>自我介绍</h1>
-      <p>{{ object.description }}</p>
-    </div>
-    <div class="col-lg-4">
+  <div style="position: absolute;right: 80px; top: 350px">
     <table>
       <tbody><tr>
         <th></th>
@@ -79,7 +33,7 @@
       <tr id="morning">
         <th>上午</th>
         <td class="active">
-            <input type="checkbox" name="vehicle" value="Car">
+          <input type="checkbox" name="vehicle" value="Car">
         </td>
         <td class="active">
           <input type="checkbox" name="vehicle" value="Car">
@@ -149,37 +103,18 @@
         </td>
       </tr>
       </tbody></table>
-    </div>
-    <div class="col-lg-4">
-      <h1>家长点评</h1>
-      {% for rate in object.rating_set.all %}
-      <p>
-        <strong>{{ rate.get_hidden_mobile }}</strong>: <span style="float:right" class="stars">{{rate.star}}
-      </span></p>
-      <p>{{ rate.comment }}</p>
-      {% endfor %}
-      <p><a class="btn btn-primary" href="#" role="button">更多点评 &raquo;</a></p>
-    </div>
+
   </div>
 </div>
-
-<center>
-<a class="btn btn-primary" style="width:400px;" href="{% url 'teacher-booking' %}" role="button">预约</a>
-</center>
-
+{% endblock splash %}
+<!-- Benefits of the Django application -->
+{% block container %}
 {% endblock container %}
 
 {% block scripts %}
 {{block.super}}
 <script type="text/javascript">
-$.fn.stars = function() {
-  return $(this).each(function() {
-    $(this).html($('<span />').width(Math.max(0, (Math.min(5, parseFloat($(this).html())))) * 16));
-  });
-}
-$(function() {
-    $('span.stars').stars();
-});
+function fs() {
+};
 </script>
 {% endblock scripts %}
-
