--- a/src/profiles/templates/profiles/show_profile.html
+++ b/src/profiles/templates/profiles/show_profile.html
@@ -3,7 +3,11 @@
 {% load staticfiles %}
 {% load thumbnail %}
 
-{% block title %}{{ block.super }}Profile{% endblock %}
+{% block title %}{{ block.super }}个人空间{% endblock %}
+
+{% block navbar-left %}
+{% include "_navbar.html" with active_link="myspace" %}
+{% endblock %}
 
 {% block container %}
 
@@ -12,7 +16,7 @@
     <div class="col-sm-10">
       <h1>{{ show_user.get_full_name }}</h1>
       {% if editable %}
-      <a href="{% url 'profiles:edit_self' %}" class="btn btn-info">Edit Profile</a>
+      <a href="{% url 'profiles:edit_self' %}" class="btn btn-info">编辑个人资料</a>
       {% endif %}
     </div>
     <div class="col-sm-2"><img title="profile picture" class="img-circle img-responsive" src="{% thumbnail show_user.profile.picture|default:'default_profile.png' 140x140 crop %}">
@@ -24,23 +28,23 @@
   <div class="row">
     <div class="col-sm-4">
       <ul class="list-group">
-        <li class="list-group-item text-muted">Profile</li>
-        <li class="list-group-item text-right"><span class="pull-left"><strong>Email:</strong></span> {{ show_user.email|default:"missing" }}
+        <li class="list-group-item text-muted">个人资料</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>邮箱地址:</strong></span> {{ show_user.email|default:"missing" }}
 	  {% if show_user.profile.email_verified %}
 	    <span class="glyphicon glyphicon-ok-circle" aria-hidden="true" title="This email address has been verified"></span>
-	    <span class="sr-only">Verified</span>
+	    <span class="sr-only">已验证</span>
 	  {% else %}
 	    <span class="glyphicon glyphicon-warning-sign" aria-hidden="true" title="This email address is not verified"></span>
-	    <span class="sr-only">Not Verified</span>
+	    <span class="sr-only">未验证</span>
 	  {% endif %}
 	</li>
-        <li class="list-group-item text-right"><span class="pull-left"><strong>Joined</strong></span> {{ show_user.date_joined }}</li>
-        <li class="list-group-item text-right"><span class="pull-left"><strong>Last seen</strong></span> {{ show_user.last_login }}</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>加入</strong></span> {{ show_user.date_joined }}</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>上次登录</strong></span> {{ show_user.last_login }}</li>
       </ul>
     </div>
     <div class="col-sm-8">
       <div class="panel panel-default">
-        <div class="panel-heading">{{ show_user.get_full_name }}'s Profile
+        <div class="panel-heading">{{ show_user.get_full_name }}的个人资料
 	  {% if show_user.profile.slug %}
 	    <a href="{% url 'profiles:show' show_user.profile.slug %}">
 	    	<span class="glyphicon glyphicon-link" aria-hidden="true" title="Profile permalink"></span>
@@ -50,7 +54,7 @@
 	  {% endif %}
 	</div>
         <div class="panel-body">
-	  <strong>Bio</strong>: {{ show_user.profile.bio }}
+	  <strong>个性签名</strong>: {{ show_user.profile.bio }}
 	</div>
       </div>
     </div>
