--- a/src/templates/teacher_detail.html
+++ b/src/templates/teacher_detail.html
@@ -164,7 +164,7 @@
 </div>
 
 <center>
-<a class="btn btn-primary" style="width:400px;" href="{% url 'teacher-booking' %}" role="button">预约</a>
+<a class="btn btn-primary" style="width:400px;" href="{% url 'teacher-booking' teacher.id %}" role="button">预约</a>
 </center>
 
 {% endblock container %}
