--- a/src/templates/student_detail.html
+++ b/src/templates/student_detail.html
@@ -80,7 +80,7 @@
 </div>
 
 <center>
-<a class="btn btn-primary" style="width:400px;" href="{% url 'teacher-booking' %}" role="button">预约</a>
+<a class="btn btn-primary" style="width:400px;" href="{% url 'student-booking' %}" role="button">预约</a>
 </center>
 
 {% endblock container %}
