--- a/src/templates/my_order_list.html
+++ b/src/templates/my_order_list.html
@@ -20,7 +20,12 @@
 
 
 {% block splash %}
-
+<div class="jumbotron jumbotron-carousel">
+  <br/>
+  <a class="btn">新订单</a>
+  <a class="btn">未结订单</a>
+  <a class="btn">已结订单</a>
+</div>
 {% endblock splash %}
 
 {% block container %}
