--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -27,8 +27,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h2>边际背后的人们</h2>
-        <p class="lead">打造边际的人们</p>
+        <h2>『状元到家』背后的人们</h2>
+        <p class="lead">打造它的人们</p>
       </div>
     </div>
     <div class="row">
@@ -36,19 +36,19 @@
         <div class="text-center"><img class="img-circle centered" src="http://lorempixel.com/128/128/people/9/" alt="profile pic"></div>
         <p class="heavy text-center">吕梁</p>
         <h2>CEO</h2>
-        <p></p>
+        <p>六次创业,从哪里跌倒,从哪里爬起</p>
       </div>
       <div class="col-lg-4">
         <div class="text-center"><img class="img-circle centered" src="http://lorempixel.com/128/128/people/2/" alt="profile pic"></div>
         <p class="heavy text-center">钟磊</p>
         <h2>CTO</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p>做出产品才是最开心的事</p>
       </div>
       <div class="col-lg-4">
         <div class="text-center"><img class="img-circle centered" src="http://lorempixel.com/128/128/people/1/" alt="profile pic"></div>
-        <p class="heavy text-center">Kate Lamport</p>
-        <h2>Front-end designer</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p class="heavy text-center">姚中仁</p>
+        <h2>前端工程师</h2>
+        <p>设计了整个页面</p>
       </div>
     </div>
     </div>
@@ -60,14 +60,12 @@
     <div class="row">
       <div id="map-outer" class="col-md-12">
         <div id="address" class="col-md-4">
-          <h2>Our Location</h2>
+          <h2>公司地址</h2>
           <address>
-            <strong>Edge Solutions Ltd.</strong><br>
-            Taj Mahal<br>
-            Agra<br>
-            Uttar Pradesh<br>
-            India - 282001<br>
-            <abbr>P:</abbr> +91 0562 222 6431
+            <strong>上海边际信息科技有限公司</strong><br>
+            上海市徐汇区田林1号<br>
+            中国 邮编200240<br>
+            <abbr>联系电话:</abbr> +91 0562 222 6431
           </address>
         </div>
         <div id="map-container" class="col-md-8"></div>
