--- a/src/templates/problem_upload.html
+++ b/src/templates/problem_upload.html
@@ -10,18 +10,18 @@
 {% endblock %}
 
 {% block splash %}
-<div class="jumbotron jumbotron-carousel corporate-jumbo">
-  <div class="container">
-    <center><h1>上传难题</h1></center>
-    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-default">完成</button>
-    </form>
-  </div>
+<div class="jumbotron jumbotron-carousel">
 </div>
 {% endblock splash %}
 <!-- Benefits of the Django application -->
 {% block container %}
+<div class="container">
+  <center><h1>上传难题</h1></center>
+  <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-default">完成</button>
+  </form>
+</div>
 {% endblock container %}
 
 {% block scripts %}
