--- a/src/templates/teacher_create.html
+++ b/src/templates/teacher_create.html
@@ -10,14 +10,7 @@
 {% endblock %}
 
 {% block splash %}
-<div class="jumbotron jumbotron-carousel corporate-jumbo">
-  <div class="container">
-    <center><h1>个人信息</h1></center>
-    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-default">完成</button>
-    </form>
-  </div>
+<div class="jumbotron jumbotron-carousel">
   <div style="position: absolute;right: 80px; top: 350px">
     <table>
       <tbody><tr>
@@ -109,6 +102,13 @@
 {% endblock splash %}
 <!-- Benefits of the Django application -->
 {% block container %}
+<div class="container">
+  <center><h1>我要开课</h1></center>
+  <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-default">完成</button>
+  </form>
+</div>
 {% endblock container %}
 
 {% block scripts %}
