Create order on both sides

--- a/src/templates/my_order_list.html
+++ b/src/templates/my_order_list.html
@@ -22,9 +22,10 @@
 {% block splash %}
 <div class="jumbotron jumbotron-carousel">
   <br/>
-  <a class="btn">新订单</a>
-  <a class="btn">未结订单</a>
-  <a class="btn">已结订单</a>
+  <a class="btn" href="?">所有订单</a>
+  <a class="btn" href="?status=0">新订单</a>
+  <a class="btn" href="?status=1">未结订单</a>
+  <a class="btn" href="?status=2">已结订单</a>
 </div>
 {% endblock splash %}
 
